crates/nash-solve/tests/snapshots/inference__record_literal.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (point)\n\npoint = { x = 1, y = 2 }\n"
---
point : forall a a1. (FromInt a1, FromInt a) => { x : a1, y : a }
