crates/nash-solve/tests/snapshots/inference__record_named_pair_fields.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype alias point = { fst : int, snd : bytes }\nfirst : point -> int\nfirst = .fst\nsecond : point -> bytes\nsecond p = p.snd\n"
---
first : point -> int
second : point -> bytes
