crates/nash-solve/tests/snapshots/inference__record_update.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (bump)\n\nbump r = { r | x = 1 }\n"
---
bump : forall (a : Any) b. FromInt a => { b | x : a } -> { b | x : a }
