crates/nash-solve/tests/snapshots/inference__recovery_annotated_tuple_keeps_independent_obligations-2.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\nbad : ((), ())\nbad = (missing (assert Primitive.True), \\x -> x)\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Missing unit`.
   ╭─[Main.nash:5:8]
 4 │ bad : ((), ())
 5 │ bad = (missing (assert Primitive.True), \x -> x)
   ·        ───┬───
   ·           ╰── required by `missing`
   ╰────
  help: Import or define an impl for `Missing unit`.


nash::type::mismatch

  × Type mismatch: expected `( unit, unit )`, found `( unit, 'a -> 'a )`.
   ╭─[Main.nash:5:7]
 3 │     missing : 'a -> 'a
 4 │ bad : ((), ())
   ·       ────┬───
   ·           ╰── declared type
 5 │ bad = (missing (assert Primitive.True), \x -> x)
   ·       ─────────────────────┬────────────────────
   ·                            ╰── body of `bad`
   ╰────
