crates/nash-solve/tests/snapshots/inference__recovery_annotated_tuple_keeps_independent_obligations.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\nbad : ((), ())\nbad = (\\x -> x, missing (assert Primitive.True))\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Missing unit`.
   ╭─[Main.nash:5:17]
 4 │ bad : ((), ())
 5 │ bad = (\x -> x, missing (assert Primitive.True))
   ·                 ───┬───
   ·                    ╰── required by `missing`
   ╰────
  help: Import or define an impl for `Missing unit`.


nash::type::mismatch

  × Type mismatch: expected `( unit, unit )`, found `( 'a -> 'a, unit )`.
   ╭─[Main.nash:5:7]
 3 │     missing : 'a -> 'a
 4 │ bad : ((), ())
   ·       ────┬───
   ·           ╰── declared type
 5 │ bad = (\x -> x, missing (assert Primitive.True))
   ·       ─────────────────────┬────────────────────
   ·                            ╰── body of `bad`
   ╰────
