crates/nash-solve/tests/snapshots/inference__recovery_blocks_repeated_and_recursive_uses_but_keeps_sibling_errors-2.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nbroken x = x x\nfirst : ()\nfirst = broken\nsecond : ()\nsecond = broken\nsibling : ()\nsibling = \\x -> x\n"
info: diagnostic
---
nash::type::infinite_type

  × `x` has a self-referential type: ∞ -> 'a
   ╭─[Main.nash:4:8]
 3 │ import Builtin exposing (..)
 4 │ broken x = x x
   ·        ─
 5 │ first : ()
   ╰────
  help: Break the type cycle; ∞ marks a repeated part of the type.


nash::type::mismatch

  × Type mismatch: expected `Primitive.unit`, found `'a -> 'a`.
    ╭─[Main.nash:10:11]
  8 │ second = broken
  9 │ sibling : ()
    ·           ─┬
    ·            ╰── declared type
 10 │ sibling = \x -> x
    ·           ───┬───
    ·              ╰── body of `sibling`
    ╰────
