crates/nash-solve/tests/snapshots/inference__recovery_blocks_repeated_and_recursive_uses_but_keeps_sibling_errors-3.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nbroken x = if True then recurse x else (\\y -> y)\nrecurse x = if True then broken x else ()\nfirst : ()\nfirst = broken\nsecond : ()\nsecond = broken\nsibling : ()\nsibling = \\x -> x\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `'a -> 'a`, found `Primitive.unit`.
   ╭─[Main.nash:5:40]
 4 │ broken x = if True then recurse x else (\y -> y)
 5 │ recurse x = if True then broken x else ()
   ·                          ────┬───      ─┬
   ·                              │          ╰── if branch 2
   ·                              ╰── previous branch
 6 │ first : ()
   ╰────


nash::type::mismatch

  × Type mismatch: expected `Primitive.unit`, found `'a -> 'a`.
    ╭─[Main.nash:11:11]
  9 │ second = broken
 10 │ sibling : ()
    ·           ─┬
    ·            ╰── declared type
 11 │ sibling = \x -> x
    ·           ───┬───
    ·              ╰── body of `sibling`
    ╰────
