crates/nash-solve/tests/snapshots/inference__recovery_blocks_repeated_and_recursive_uses_but_keeps_sibling_errors.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nbroken = if True then () else (\\x -> x)\nfirst : ()\nfirst = broken\nsecond : ()\nsecond = broken\nsibling : ()\nsibling = \\x -> x\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.unit`, found `'a -> 'a`.
   ╭─[Main.nash:4:32]
 3 │ import Builtin exposing (..)
 4 │ broken = if True then () else (\x -> x)
   ·                       ─┬       ───┬───
   ·                        │          ╰── if branch 2
   ·                        ╰── previous branch
 5 │ first : ()
   ╰────


nash::type::mismatch

  × Type mismatch: expected `Primitive.unit`, found `'a -> 'a`.
    ╭─[Main.nash:10:11]
  8 │ second = broken
  9 │ sibling : ()
    ·           ─┬
    ·            ╰── declared type
 10 │ sibling = \x -> x
    ·           ───┬───
    ·              ╰── body of `sibling`
    ╰────
