crates/nash-solve/tests/snapshots/inference__recovery_direct_alias_bool_keeps_header_type.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nf : () -> ()\nf (True as whole) = whole ()\n"
info: diagnostic
---
nash::type::mismatch

  × `whole` is not a function; received 1 argument.
   ╭─[Main.nash:5:21]
 4 │ f : () -> ()
 5 │ f (True as whole) = whole ()
   ·                     ─────
   ╰────


nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.unit`, found `Primitive.bool`.
   ╭─[Main.nash:5:4]
 3 │ import Builtin exposing (..)
 4 │ f : () -> ()
   ·     ────┬───
   ·         ╰── declared argument type
 5 │ f (True as whole) = whole ()
   ·    ──┬──
   ·      ╰── argument 1 of `f`
   ╰────
